test/classes/errors/noOverloadNotEquals.good
noOverloadNotEquals.chpl:45: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:49: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:53: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:57: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:61: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:65: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:69: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:73: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:77: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:81: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:85: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:89: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:89: note: If you feel this should be permitted for mixed class/non-class pairs, please comment on issue #16830
noOverloadNotEquals.chpl:93: error: Can't overload '!=' for class types
noOverloadNotEquals.chpl:93: note: If you feel this should be permitted for mixed class/non-class pairs, please comment on issue #16830
